--- a/style.css
+++ b/style.css
@@ -86,6 +86,7 @@ color: #E0B612;
     border-radius: 5px;
     background: #495BC3;
     color: #fff;
+    
 }
 .notify {
     color: #fff;
@@ -95,6 +96,7 @@ color: #E0B612;
     margin-top: 20px;
     border-radius: 15px;
     padding: 5px 20px;
+    display :none;
 }
 .notify-section{
     width: 35%;
